# kurzgemeet

./: .gitignore  README.md
client/: .prettierrc  package-lock.json  package.json  tailwind.config.cjs
client-react/: package-lock.json  package.json  tailwind.config.js
client-react/components/ui/: Button.tsx  Input.tsx
client-react/pages/: index.tsx
client/src/: app.html
client/src/lib/components/: Button.svelte  Input.svelte
client/src/lib/services/: data-model.ts  meetup.service.ts  util.ts
client/src/routes/: +page.svelte
client/src/routes/[meetup_password]/: +page.server.ts  +page.svelte  +page.ts
client/static/: smui-dark.css  smui.css
server/: .env  Cargo.toml
server/migrations/2022-09-26-192822_initial/: down.sql  up.sql
server/scripts/: init.sql
server/src/: main.rs
server/src/lib/: data_model.rs  meetup_service.rs  mod.rs  schema.rs  user_service.rs
server/src/services/: meetup_service.rs  mod.rs
