[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
chrono = "0.4.22"
diesel = { version = "2.0.0", features = ["postgres"] }
dotenvy = "0.15"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
